finish html, css and rsponsive

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
     </div>
 
     <a href="#" data-toggle="choices" data-value="paper" class="circle paper">
-      <img class="choice-image" src="images/icon-paper.svg" alt="vector icon of paper">
+      <img class="choice-image" src="images/icon-paper.svg" alt="icon of paper">
     </a>
 
     <a href="#" data-toggle="choices" data-value="scissor" class="circle scissor">
-      <img class="choice-image" src="images/icon-scissors.svg" alt="vector icon of scissor">
+      <img class="choice-image" src="images/icon-scissors.svg" alt="icon of scissor">
     </a>
 
     <a href="#" data-toggle="choices" data-value="rock" class="circle rock">
-      <img class="choice-image" src="images/icon-rock.svg" alt="vector icon of rock">
+      <img class="choice-image" src="images/icon-rock.svg" alt="icon of rock">
     </a>
 
 
@@ -59,6 +59,24 @@
     </div>
 
   </section>
+
+  <button class="rule-button">
+    <span>R</span>
+    <span>U</span>
+    <span>L</span>
+    <span>E</span>
+    <span>S</span>
+  </button>
+
+  <div class="modal-container">
+    <div class="modal">
+      <div class="rules">
+        <h2>RULES</h2>
+        <img class="close-rule" src="images/icon-close.svg" alt="icon of close button">
+      </div>
+      <img class="image-rule" src="images/image-rules.svg" alt="image rules of rock paper scissor">
+    </div>
+  </div>
 
 
 
