added js and finished

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <div class="score-container">
       <div class="score-wrapper">
         <p>YOU</p>
-        <h1 class="score">0</h1>
+        <h1 class="score your-score"></h1>
       </div>
 
       <div class="score-wrapper">
         <p>COM</p>
-        <h1 class="score">0</h1>
+        <h1 class="score com-score"></h1>
       </div>
     </div>
   </section>
@@ -80,7 +80,7 @@
 
 
 
-
+  <script src="app.js"></script>
 </body>
 
 </html>
